# Furniture-IMS

./: .gitignore  .npmrc  .prettierrc  AGENTS.md  CHANGELOG.md  README.md  biome.json  eslint.config.mjs  justfile  next.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  设计文档整体评审报告.md
.github/workflows/: ci.yml  release.yml
.trae/skills/: tauri-icon
app/: globals.css  layout.tsx  page.tsx
app/[locale]/: layout.tsx  page.tsx
components/common/: page-placeholder.tsx  pagination.tsx  splash-screen.tsx
components/layout/: app-footer.tsx  app-layout.tsx  header.tsx  locale-switcher.tsx  (+1 more)
config/: nav.ts
demo/: README.md  index.html
docs/: 01-requirements.md  02-database-design.md  03-ui-prototype.md  04-development-plan.md  05-page-todo-list.md  06-code-review-report.md
i18n/: config.ts  navigation.ts  request.ts  routing.ts
lib/: business-excel.ts  currency.ts  tauri.ts
messages/: en.json  vi.json  zh.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/migrations/sqlite/: 001_init.sql  002_seed_data.sql  003_appearance_config.sql  004_production_orders.sql  005_drop_legacy_work_orders.sql
src-tauri/src/: auth.rs  error.rs  lib.rs  operation_log.rs
src-tauri/src/commands/: category.rs  data_management.rs  finance.rs  inventory.rs  inventory_ops.rs  material.rs  mod.rs  production_order.rs  purchase.rs  replenishment.rs  reports.rs  sales.rs
src-tauri/src/db/: migration.rs  mod.rs
tests/: material-command-args.test.mjs
(+184 files in other folders)
