[package]
name = "app"
version = "0.1.4"
description = "CloudPivot IMS — 越南家具工厂桌面端进销存系统"
authors = ["kurisu"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 数据库 — SQLite + 异步运行时
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# 密码哈希
bcrypt = "0.17"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# UUID 生成
uuid = { version = "1", features = ["v4"] }
# 错误处理
thiserror = "2"
